# window-class-for-opengl-exercise

./: CMakeLists.txt  README.md
include/glad/: glad.h
src/: main.cpp
src/Window/: Window.cpp  Window.h
